added main layout

--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,21 +1,267 @@
 .footer {
+  display: flex;
+  position: relative;
   width: 100%;
-  padding: 40px 72px 72px;
-  box-sizing: border-box;
-  background-color: var(--bg-color);
+  min-height: 822px;
+  margin-block-start: 130px;
+  margin-block-end: 90px;
+}
+.footer-line{
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 36px;
+  right: 36px;
+  height: 3px;
+  width: auto;
+  background: linear-gradient(90deg, #EBE8E5 -71.22%, #D3C8BB 197.8%);
+}
+.footer-content {
+  display: grid;
+  width: 100%;
+  gap: 102px;
+  grid-template-columns: minmax(803px, auto) minmax(406px, min-content);
+  margin-block-start: 93px;
+  margin-inline: 36px;
+} 
+.footer-info_container {
+  display: grid;
+  grid-template-columns: minmax(202px, auto) minmax(202px, auto) minmax(202px, auto);
+  margin-inline-start: 318px;
+  gap: 97px;
+  height: min-content;
+}
+.goods-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px
+}
+.section-title {
+  display: flex;
+  color: rgba(49, 19, 17, 1);
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21.6px;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-align: left;
+}
+.section-line {
+  display: grid;
+  position: relative;
+  height: 2px;
+}
+.section-line:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background: linear-gradient(90deg, #EBE8E5 -71.22%, #D3C8BB 197.8%);
+}
+.title {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.8px;
+  letter-spacing: 0.04em;
+  text-align: left;
+}
+.section {
+  display: grid;
+  gap: 13px;
+}
+.list {
+  display: grid;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20.19px;
+  padding-inline-start: 14px;
+  color: rgba(170, 146, 122, 1);
+}
+.section-button {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  width: 34px;
+  height: 22px;
+  background-color: var(--bg-button-color);
+  color: var(--bg-color);
+  cursor: pointer;
+}
+.services-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px
+}
+.company-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px
+}
+.footer-address_container {
+  display:flex;
+  flex-direction: column;
+  position: relative;
+  height: min-content;
+  background-color: rgb(242, 242, 242);
+}
+.address_content {
+  display: flex;
+  flex-direction: column;
+  margin-inline-start: 71px;
+  margin-inline-end: 24px;
+  margin-block-start: 24px;
+  margin-block-end: 43px;
+  gap: 45px;
+}
+.address_geotag {
+  display: flex;
+  position: absolute;
+  width: 27px;
+  height: 36.5px;
+  top: 37px;
+  left: 29px;
+  background: transparent url("data:image/svg+xml,%3Csvg width='27.000000' height='37.000000' viewBox='0 0 27 37' fill='none' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdesc%3E Created with Pixso. %3C/desc%3E%3Cdefs/%3E%3Cpath id='Ellipse 7' d='M27 13.68C27 21.24 13.5 37 13.5 37C13.5 37 0 21.24 0 13.68C0 6.12 6.04 0 13.5 0C20.95 0 27 6.12 27 13.68Z' fill='%23AA927A' fill-opacity='1.000000' fill-rule='nonzero'/%3E%3Ccircle id='Ellipse 8' cx='13.500000' cy='13.500000' r='4.500000' fill='%23E8E1E0' fill-opacity='1.000000'/%3E%3C/svg%3E%0A") no-repeat center;
+}
+.address_text {
+  font-style: normal;
+  color: rgba(49, 19, 17, 1);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 25.24px;
+}
+.address_contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+.address_email {
+  font-style: normal;
+  color: rgba(49, 19, 17, 1);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 25.24px;
+}
+.address_phone {
+  font-style: normal;
+  color: rgba(49, 19, 17, 1);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+}
+address {
+  font-style: normal;
+  color: rgba(49, 19, 17, 1)
+}
+address a:visited {
+  color: rgba(49, 19, 17, 1)
 }
 
-.footer__text {
-  margin: 0;
-  font: var(--font-s);
-  font-weight: var(--font-weight-s);
-  color: var(--primary-color);
-  line-height: 1.2;
-  opacity: .6;
-}
-
-@media screen and (width <= 1100px) {
+@media (min-width:1024px) and (max-width:1699px) {
   .footer {
-    padding: 41px 20px 59px;
+    flex-direction: column;
+    min-height: 1046px;
+    margin-block-start: 100px;
+    margin-block-end: 65px;
+  }
+  .footer-line {
+    left: 0;
+    right: 0;
+  }
+  .footer-line:after {
+    content: "©";
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    height: 18px;
+  }
+  .footer-content {
+    grid-template-columns: auto;
+    width: auto;
+    gap: 105px;
+    margin-block-start: 83px;
+    margin-inline: 30px;
+   }
+  .footer-info_container {
+    display: grid;
+    grid-template-columns: minmax(281px, auto) minmax(281px, auto) minmax(281px, auto);
+    margin: 0;
+    gap:60px;
+  }
+  .footer-address_container {
+    display: grid;
+    min-height: 119px;
+  }
+  .address_content {
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: minmax(429px, min-content) minmax(163px, min-content) minmax(195px, min-content); 
+    align-items: center;
+    margin-inline-start: 71px;
+    margin-inline-end: 24px;
+    gap: 38.5px;
+  }
+  .address_geotag {
+    top: 34.5px;
+    left: 29px;
+  }
+}
+
+@media (max-width:1023px) {
+  .footer {
+    flex-direction: column;
+    min-height: 1542px;
+    margin-block-start: 80px;
+    margin-block-end: 0px;
+  }
+  .footer-content {
+    display: grid;
+    margin-block-start:0;
+    grid-template-columns: auto;
+    width: auto;
+    margin-inline: 12px;
+    gap: 82px;
+  }
+  .footer-line {
+    left: 0;
+    right: 0;
+  }
+  .footer-line:after {
+    content: "©";
+    position: absolute;
+    top: 30px;
+    left: 12px;
+    height: 18px;
+  }
+  .footer-info_container {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    margin-block-start: 76px;
+    margin-inline: 0;
+    width: 100%;
+    gap: 40px;
+  }
+  .footer-address_container {
+    display:flex;
+    flex-direction: column;
+  }
+  .address_content {
+    display: flex;
+    flex-direction: column;
+    margin:0;
+    margin-block-start: 20px;
+    margin-block-end: 20px;
+    margin-inline-start: 20px;
+    gap:32px;
+  }
+  .address_geotag {
+    top: 20px;
+    left: 20px;
+  }
+  .address_text {
+    margin-inline-start: 42px;
   }
 }
