--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -6,6 +6,10 @@
 @import url("../blocks/header/header.css");
 @import url("../blocks/main/main.css");
 @import url("../blocks/connection/connection.css");
+@import url("../blocks/info/info.css");
+@import url("../blocks/sn/sn.css");
+@import url("../blocks/order/order.css");
+@import url("../blocks/footer/footer.css");
 
 html {
   scroll-behavior: smooth;
@@ -23,4 +27,41 @@ html {
   align-items: center;
   overflow: hidden;
   scroll-behavior: smooth;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li,
+a,
+div,
+span,
+button {
+  text-decoration: none;
+  outline: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+ul,
+ol,
+li,
+a {
+  list-style: none;
+}
+
+a:visited {
+  color: var(--bg-color)
+}
+
+a,
+button {
+  cursor: pointer;
 }
