--- a/src/blocks/sn/sn.css
+++ b/src/blocks/sn/sn.css
@@ -1,9 +1,12 @@
 .sn {
   display: grid;
   position: relative;
-  height: 860px;
   border-radius: 4px;
+  grid-template-columns: minmax(1700px, auto);
+  grid-template-rows: minmax(860px, auto);
   background-color: var(--bg-gray-color);
+  background: url("../../images/info.png") no-repeat top;
+  background-size: cover;
 }
 
 .sn-content {
@@ -76,8 +79,10 @@
 
 @media (min-width:1024px) and (max-width:1699px) {
   .sn {
-  height: 509px;
+    grid-template-columns: minmax(1023px, auto);
+    grid-template-rows: minmax(509px, auto);
   }
+
   .sn-content {
     gap: 23px;
     left: 40px;
@@ -85,16 +90,16 @@
     width: 360px;
     height: 179px;
   }
-  
+
   .sn-title {
     font-size: 47px;
     line-height: 56.4px;
   }
-  
+
   .sn-text {
     font-size: 16px;
     line-height: 20.19px;
-    color:var(--dark-gray-color)
+    color: var(--bg-color)
   }
 
   .sn-button_container {
@@ -119,8 +124,8 @@
 
 @media (max-width:1023px) {
   .sn {
-    height: 640px;
-    border-radius: 0;
+    grid-template-columns: minmax(375px, auto);
+    grid-template-rows: minmax(640px, auto);
   }
 
   .sn-content {
@@ -130,18 +135,18 @@
     width: 351px;
     height: 143px;
   }
-  
+
   .sn-title {
     font-size: 40px;
     line-height: 48px;
   }
-  
+
   .sn-text {
     font-size: 20px;
     line-height: 24px;
-   
+
   }
-  
+
   .sn-button_container {
     width: 183px;
     height: 44px;
@@ -159,6 +164,6 @@
     right: 44px;
     top: 17px;
   }
-  
-  
+
+
 }
