--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -10,6 +10,7 @@
 @import url("../blocks/sn/sn.css");
 @import url("../blocks/order/order.css");
 @import url("../blocks/footer/footer.css");
+@import url("../blocks/popup/popup.css");
 
 html {
   scroll-behavior: smooth;
