--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -72,7 +72,7 @@
   display: grid;
   gap: 13px;
 }
-.list {
+.section__link-list{
   display: grid;
   font-size: 16px;
   font-weight: 400;
@@ -80,6 +80,13 @@
   padding-inline-start: 14px;
   color: rgba(170, 146, 122, 1);
 }
+.section__link-list a{
+  color: rgba(170, 146, 122, 1);
+}
+.section__link-list a:visited{
+  color: rgba(170, 146, 122, 1);
+}
+
 .section-button {
   display: grid;
   align-items: center;
