--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -10,7 +10,6 @@
   right: 0;
   z-index: 10;
 }
-
 .popup__close {
   width: 12px;
   height: 12px;
@@ -30,12 +29,9 @@
   margin: 0;
   cursor: pointer;
 }
-
 .popup__close:hover {
   opacity: 0.6;
-
 }
-
 .popup__content {
   display: block;
   max-width: 595px;
@@ -47,25 +43,6 @@
   box-sizing: border-box;
   padding: 40px;
 }
-
-
-.popup__button {
-  display: grid;
-  margin-block-start: 30px;
-  position: relative;
-  align-items: center;
-  width: 249px;
-  height: 61px;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 16.8px;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  clip-path: polygon(6% 0, 100% 0%, 94% 100%, 0% 100%);
-  background-color: rgba(207, 207, 207, 1);
-  color: var(--bg-color);
-}
-
 .popup__text {
   display: block;
   min-height: 75px;
@@ -74,15 +51,12 @@
   font-weight: 400;
   line-height: 25.44px;
 }
-
 .popup__form {
   margin-block-start: 40px;
 }
-
 .popup__action{
   margin-block-start: 40px;
 }
-
 .popup__input {
   width: 100%;
   height: 48px;
@@ -96,7 +70,6 @@
   padding: 10px 0 0;
   margin-bottom: 20px;
 }
-
 .popup__input_type_file {
   width: 0.1px;
   height: 0.1px;
@@ -105,7 +78,6 @@
   position: absolute;
   z-index: -1;
 }
-
 .popup__input-imitation {
   display: block;
   position: relative;
@@ -121,10 +93,25 @@
   padding: 10px 0 0;
   padding-bottom: 40px;
 }
-
 .popup__input::placeholder {
   color: rgba(97, 77, 73, 1);
   transform: translateY(-15px);
+}
+.popup__button {
+  display: grid;
+  margin-block-start: 30px;
+  position: relative;
+  align-items: center;
+  width: 249px;
+  height: 61px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.8px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  clip-path: polygon(6% 0, 100% 0%, 94% 100%, 0% 100%);
+  background-color:rgba(178, 31, 36, 1);
+  color: rgba(255, 255, 255, 1);
 }
 
 .file-input__label span {
@@ -137,7 +124,6 @@
   right: 0px;
   background: transparent url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17.5101 8.13304L10.4102 15.2329C9.56597 16.0772 8.19717 16.0772 7.35292 15.2329C6.5069 14.3869 6.50893 13.0146 7.35745 12.1711L12.8632 6.69785L14.2459 5.31518C15.9282 3.63284 18.6558 3.63284 20.3381 5.31518C22.0205 6.99751 22.0205 9.72512 20.3381 11.4075L18.9763 12.7693L13.8148 17.9309C11.1448 20.712 7.09921 21.1352 4.27061 18.4197C1.47664 15.7375 1.95021 11.7163 4.7752 8.89129L9.91637 3.74933' stroke='%23614D49' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A") no-repeat center;
 }
-
 .popup_is-animated {
   display: flex;
   visibility: hidden;
@@ -146,7 +132,6 @@
   user-select: none;
   transition: visibility 0s 0.6s, opacity 0.6s;
 }
-
 .popup_is-opened {
   display: flex;
   visibility: visible;
@@ -154,7 +139,6 @@
   pointer-events: all;
   transition: visibility 0s, opacity 0.6s;
 }
-
 .popup__rule {
   color: rgba(97, 77, 73, 1);
   font-size: 16px;
@@ -164,12 +148,47 @@
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
 }
-
 .popup__link {
   text-decoration: underline;
 }
 
-@media (max-width:1023px) {
+form:valid .button {
+  display: grid;
+  margin-block-start: 30px;
+  position: relative;
+  align-items: center;
+  width: 249px;
+  height: 61px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.8px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  clip-path: polygon(6% 0, 100% 0%, 94% 100%, 0% 100%);
+  background-color:rgba(178, 31, 36, 1);
+  color: rgba(255, 255, 255, 1);
+}
+
+form:invalid button {
+  display: grid;
+  margin-block-start: 30px;
+  position: relative;
+  align-items: center;
+  width: 249px;
+  height: 61px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.8px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  clip-path: polygon(6% 0, 100% 0%, 94% 100%, 0% 100%);
+  background-color: rgba(207, 207, 207, 1);
+  color: var(--bg-color);
+  pointer-events: none;
+}
+
+
+@media (max-width:770px) {
   .popup__content {
     max-width: 340px;
     min-height: 450px;
