--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -21,6 +21,7 @@ html {
   font-family: var(--font-family-main);
   background-color: var(--bg-color);
   width: 100%;
+  min-width: 375px;
   min-height: 100dvh;
   margin: 0 auto;
   display: flex;
